metadata/objects/graxopportunityindex__x.object
<CustomObject>
    <fields>
        <fullName>formula_number_c__c</fullName>
        <description>formula_number__c</description>
        <externalDeveloperName>formula_number__c</externalDeveloperName>
        <label>formula_number__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>graxModifiedTime__c</fullName>
        <description>graxModifiedTime</description>
        <externalDeveloperName>graxModifiedTime</externalDeveloperName>
        <label>graxModifiedTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>grax_Account_Name__c</fullName>
        <description>grax_Account_Name</description>
        <externalDeveloperName>grax_Account_Name</externalDeveloperName>
        <label>grax_Account_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_Campaign_Name__c</fullName>
        <description>grax_Campaign_Name</description>
        <externalDeveloperName>grax_Campaign_Name</externalDeveloperName>
        <label>grax_Campaign_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_Case_r_CaseNumber__c</fullName>
        <description>grax_Case__r_CaseNumber</description>
        <externalDeveloperName>grax_Case__r_CaseNumber</externalDeveloperName>
        <label>grax_Case__r_CaseNumber</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_Coaching_r_Name__c</fullName>
        <description>grax_Coaching__r_Name</description>
        <externalDeveloperName>grax_Coaching__r_Name</externalDeveloperName>
        <label>grax_Coaching__r_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_Contract_ContractNumber__c</fullName>
        <description>grax_Contract_ContractNumber</description>
        <externalDeveloperName>grax_Contract_ContractNumber</externalDeveloperName>
        <label>grax_Contract_ContractNumber</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_CreatedBy_Name__c</fullName>
        <description>grax_CreatedBy_Name</description>
        <externalDeveloperName>grax_CreatedBy_Name</externalDeveloperName>
        <label>grax_CreatedBy_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_CurrentGenerators_c__c</fullName>
        <description>grax__CurrentGenerators__c</description>
        <externalDeveloperName>grax__CurrentGenerators__c</externalDeveloperName>
        <label>grax__CurrentGenerators__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_DeliveryInstallationStatus_c__c</fullName>
        <description>grax__DeliveryInstallationStatus__c</description>
        <externalDeveloperName>grax__DeliveryInstallationStatus__c</externalDeveloperName>
        <label>grax__DeliveryInstallationStatus__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_LastModifiedBy_Name__c</fullName>
        <description>grax_LastModifiedBy_Name</description>
        <externalDeveloperName>grax_LastModifiedBy_Name</externalDeveloperName>
        <label>grax_LastModifiedBy_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_MainCompetitors_c__c</fullName>
        <description>grax__MainCompetitors__c</description>
        <externalDeveloperName>grax__MainCompetitors__c</externalDeveloperName>
        <label>grax__MainCompetitors__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_OrderNumber_c__c</fullName>
        <description>grax__OrderNumber__c</description>
        <externalDeveloperName>grax__OrderNumber__c</externalDeveloperName>
        <label>grax__OrderNumber__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_Owner_Name__c</fullName>
        <description>grax_Owner_Name</description>
        <externalDeveloperName>grax_Owner_Name</externalDeveloperName>
        <label>grax_Owner_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_PartnerAccount_Name__c</fullName>
        <description>grax_PartnerAccount_Name</description>
        <externalDeveloperName>grax_PartnerAccount_Name</externalDeveloperName>
        <label>grax_PartnerAccount_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_Pricebook2_Name__c</fullName>
        <description>grax_Pricebook2_Name</description>
        <externalDeveloperName>grax_Pricebook2_Name</externalDeveloperName>
        <label>grax_Pricebook2_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_Primary_Contact_r_Name__c</fullName>
        <description>grax_Primary_Contact__r_Name</description>
        <externalDeveloperName>grax_Primary_Contact__r_Name</externalDeveloperName>
        <label>grax_Primary_Contact__r_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_RecordType_Name__c</fullName>
        <description>grax_RecordType_Name</description>
        <externalDeveloperName>grax_RecordType_Name</externalDeveloperName>
        <label>grax_RecordType_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_SyncedQuote_Name__c</fullName>
        <description>grax_SyncedQuote_Name</description>
        <externalDeveloperName>grax_SyncedQuote_Name</externalDeveloperName>
        <label>grax_SyncedQuote_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_TrackingNumber_c__c</fullName>
        <description>grax__TrackingNumber__c</description>
        <externalDeveloperName>grax__TrackingNumber__c</externalDeveloperName>
        <label>grax__TrackingNumber__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_account_xf__c</fullName>
        <description>grax_account_xf</description>
        <externalDeveloperName>grax_account_xf</externalDeveloperName>
        <label>grax_account_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_accountid_name__c</fullName>
        <description>grax_accountid_name</description>
        <externalDeveloperName>grax_accountid_name</externalDeveloperName>
        <label>grax_accountid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_campaign_xf__c</fullName>
        <description>grax_campaign_xf</description>
        <externalDeveloperName>grax_campaign_xf</externalDeveloperName>
        <label>grax_campaign_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_campaignid_name__c</fullName>
        <description>grax_campaignid_name</description>
        <externalDeveloperName>grax_campaignid_name</externalDeveloperName>
        <label>grax_campaignid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_case_c_name__c</fullName>
        <description>grax_case__c_name</description>
        <externalDeveloperName>grax_case__c_name</externalDeveloperName>
        <label>grax_case__c_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_case_xf__c</fullName>
        <description>grax_case_xf</description>
        <externalDeveloperName>grax_case_xf</externalDeveloperName>
        <label>grax_case_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_coaching_c_name__c</fullName>
        <description>grax_coaching__c_name</description>
        <externalDeveloperName>grax_coaching__c_name</externalDeveloperName>
        <label>grax_coaching__c_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_connectionreceivedid_name__c</fullName>
        <description>grax_connectionreceivedid_name</description>
        <externalDeveloperName>grax_connectionreceivedid_name</externalDeveloperName>
        <label>grax_connectionreceivedid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_connectionsentid_name__c</fullName>
        <description>grax_connectionsentid_name</description>
        <externalDeveloperName>grax_connectionsentid_name</externalDeveloperName>
        <label>grax_connectionsentid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_contact_to_email_c_name__c</fullName>
        <description>grax_contact_to_email__c_name</description>
        <externalDeveloperName>grax_contact_to_email__c_name</externalDeveloperName>
        <label>grax_contact_to_email__c_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_contact_xf__c</fullName>
        <description>grax_contact_xf</description>
        <externalDeveloperName>grax_contact_xf</externalDeveloperName>
        <label>grax_contact_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_contract_xf__c</fullName>
        <description>grax_contract_xf</description>
        <externalDeveloperName>grax_contract_xf</externalDeveloperName>
        <label>grax_contract_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_contractid_name__c</fullName>
        <description>grax_contractid_name</description>
        <externalDeveloperName>grax_contractid_name</externalDeveloperName>
        <label>grax_contractid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_createdbyid_name__c</fullName>
        <description>grax_createdbyid_name</description>
        <externalDeveloperName>grax_createdbyid_name</externalDeveloperName>
        <label>grax_createdbyid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_lastmodifiedbyid_name__c</fullName>
        <description>grax_lastmodifiedbyid_name</description>
        <externalDeveloperName>grax_lastmodifiedbyid_name</externalDeveloperName>
        <label>grax_lastmodifiedbyid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_opportunity_name__c</fullName>
        <description>grax_opportunity_name</description>
        <externalDeveloperName>grax_opportunity_name</externalDeveloperName>
        <label>grax_opportunity_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_opportunity_xf__c</fullName>
        <description>grax_opportunity_xf</description>
        <externalDeveloperName>grax_opportunity_xf</externalDeveloperName>
        <label>grax_opportunity_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_ownerid_name__c</fullName>
        <description>grax_ownerid_name</description>
        <externalDeveloperName>grax_ownerid_name</externalDeveloperName>
        <label>grax_ownerid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_partneraccountid_name__c</fullName>
        <description>grax_partneraccountid_name</description>
        <externalDeveloperName>grax_partneraccountid_name</externalDeveloperName>
        <label>grax_partneraccountid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_pricebook2_xf__c</fullName>
        <description>grax_pricebook2_xf</description>
        <externalDeveloperName>grax_pricebook2_xf</externalDeveloperName>
        <label>grax_pricebook2_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_pricebook2id_name__c</fullName>
        <description>grax_pricebook2id_name</description>
        <externalDeveloperName>grax_pricebook2id_name</externalDeveloperName>
        <label>grax_pricebook2id_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_primary_contact_c_name__c</fullName>
        <description>grax_primary_contact__c_name</description>
        <externalDeveloperName>grax_primary_contact__c_name</externalDeveloperName>
        <label>grax_primary_contact__c_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_project_manager_contact_c_name__c</fullName>
        <description>grax_project_manager_contact__c_name</description>
        <externalDeveloperName>grax_project_manager_contact__c_name</externalDeveloperName>
        <label>grax_project_manager_contact__c_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_quote_xf__c</fullName>
        <description>grax_quote_xf</description>
        <externalDeveloperName>grax_quote_xf</externalDeveloperName>
        <label>grax_quote_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_recordtype_xf__c</fullName>
        <description>grax_recordtype_xf</description>
        <externalDeveloperName>grax_recordtype_xf</externalDeveloperName>
        <label>grax_recordtype_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_recordtypeid_name__c</fullName>
        <description>grax_recordtypeid_name</description>
        <externalDeveloperName>grax_recordtypeid_name</externalDeveloperName>
        <label>grax_recordtypeid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_syncedquoteid_name__c</fullName>
        <description>grax_syncedquoteid_name</description>
        <externalDeveloperName>grax_syncedquoteid_name</externalDeveloperName>
        <label>grax_syncedquoteid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_territory2id_name__c</fullName>
        <description>grax_territory2id_name</description>
        <externalDeveloperName>grax_territory2id_name</externalDeveloperName>
        <label>grax_territory2id_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_topinsightid_name__c</fullName>
        <description>grax_topinsightid_name</description>
        <externalDeveloperName>grax_topinsightid_name</externalDeveloperName>
        <label>grax_topinsightid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_user_xf__c</fullName>
        <description>grax_user_xf</description>
        <externalDeveloperName>grax_user_xf</externalDeveloperName>
        <label>grax_user_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_workcoaching_xf__c</fullName>
        <description>grax_workcoaching_xf</description>
        <externalDeveloperName>grax_workcoaching_xf</externalDeveloperName>
        <label>grax_workcoaching_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_xf__c</fullName>
        <description>grax_xf</description>
        <externalDeveloperName>grax_xf</externalDeveloperName>
        <label>grax_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graxaccountindex__c</fullName>
        <externalDeveloperName>ExternalId</externalDeveloperName>
        <label>graxaccountindex</label>
        <length>255</length>
        <referenceTo>graxaccountindex__x</referenceTo>
        <relationshipLabel>graxopportunityindex</relationshipLabel>
        <relationshipName>graxopportunityindex1</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>graxid__c</fullName>
        <description>graxid</description>
        <externalDeveloperName>graxid</externalDeveloperName>
        <label>graxid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graxorgid__c</fullName>
        <description>graxorgid</description>
        <externalDeveloperName>graxorgid</externalDeveloperName>
        <label>graxorgid</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Opp_Products_c__c</fullName>
        <description>of_Opp_Products__c</description>
        <externalDeveloperName>of_Opp_Products__c</externalDeveloperName>
        <label>of_Opp_Products__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>graxopportunityindex</label>
    <pluralLabel>graxopportunityindex</pluralLabel>
</CustomObject>